fix handleError + add cart + add order