@@ -4,12 +4,15 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Service;
 import spring.api.demo.entity.User;
 import spring.api.demo.exception.ErrorCode;
 import spring.api.demo.repository.UserRepository;
+import org.springframework.transaction.annotation.Transactional;
 import java.util.UUID;
-import java.util.Collections;
+import java.util.List;
+import java.util.Locale;
 
 @Service
 @RequiredArgsConstructor
@@ -18,14 +21,19 @@ public class CustomUserDetailsService implements UserDetailsService {
     private final UserRepository userRepository;
 
     @Override
+    @Transactional(readOnly = true)
     public UserDetails loadUserByUsername(String userId) throws UsernameNotFoundException {
         User user = userRepository.findById(UUID.fromString(userId))
                 .orElseThrow(() -> new UsernameNotFoundException(ErrorCode.USER_NOT_FOUND.getMessage()));
 
+        String roleName = user.getRole() != null && user.getRole().getName() != null
+            ? user.getRole().getName().toUpperCase(Locale.ROOT)
+            : "CUSTOMER";
+
         return new org.springframework.security.core.userdetails.User(
                 user.getEmail(),
                 user.getPasswordHash(),
-                Collections.emptyList()
+            List.of(new SimpleGrantedAuthority("ROLE_" + roleName))
         );
     }
 }
